# issue-auth-tool

./: .gitignore  README.md  config.toml  pyproject.toml
src/: __init__.py  exceptions.py  issues_auth_tool.py  settings.py
src/mcp/: google.py  viewer.py
src/schema/: judgement.schema.json  mcp.schema.json  type.schema.json
tests/: judgement.json  mcp.json  test_all.py  type.json
